# algolib

./: .coverage  .gitignore  README.md  coverage.xml  pyproject.toml
.github/workflows/: docs.yml
.hypothesis/constants/: 02ff698839bc6903  03e54202480795e4  04d7f2b93286b622  0d4a8e75daf2c5c7  132cc65edd8fa4bf  1451c839dedbaa17  29d68fbbd90292bb  34d67be1a241e7ee  38577fbee51c1a60  402367854d48fa66  4f5183ae7f318575  600cef6f1e6a3328  62f544cdde803041  72f541f17788779b  7369e586b2529ddb  796c9aa25e43e699  7f83cb66e4a7c221  80507d546232b637  8ffd74b0d1721c51  906d3059d56b5005  9459e787ef1a8d12  9c78fd0e06b0cfb4  9da6dc7b56180895  a451d5ee71ac59c5  a8fb91a61eeac06c  aa68e366b8b2f82c  b5aa90b8006be0d9  ba84c44d4c4eee93  cbf8c5ad575ff8d8  d32bccee8d07f121  d5c9d735f74343e3  d6300f6e470fe465  da39a3ee5e6b4b0d  e1adfe01a55a2094  ec974f7a90192076
.hypothesis/examples/0246e2f621f53e92/: 52b3ef0a41a6a955
.hypothesis/examples/04e6b3400353b141/: 021e4a45812be469  0246e2f621f53e92  063cd9827b20e569  09dd577d6e77ad37  0cd78eaf6162f02a  0e649c61c7324dfb  18d9ed8fc2ca30a9  1c0bf3e479a4f84c  1c4736c4f828b21d  1d01e9577cfbd849  1fb3dbf3bbf04198  201783d0bbcd0cf2  261415bd6e095d4e  2675ae7bd9936ef4  281c52e18c24f323  2864416419c5b71c  2f98c7088e319dff  34329e926bd3777d  3bacf01b06777d6d  4081ae9fbe961e43  42f869b29c7a98ec  44da8786fbb88cf9  44e2595e0ddfc5f8  4b2675390c6165bc  4f47f50f75bf7572  516691186a2f5ff3  54008efbfcf96ce9  5905cd4bd0980235  6ac9673ef839e626  6c5ab8144416b2ec  (+32 more)
docs/: Makefile  TODO_math_functions.md  algoTODO.md  i18n_build.sh  index.html
docs/locale/: index.pot
docs/source/: conf.py  index.rst
playground/: test_something.py
src/algolib/: __init__.py  exceptions.py  sample.py
tests/: test_sample.py
tests/core/: test_core.py
tools/: update_all.sh  update_coverage_badge.py
(+2440 files in other folders)
