[project]
name = "algolib"
version = "0.1.0"
description = "A clean algorithms library template with tests and docs (Python 3.10 edition)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Hideki Hokuto" }]
license = { text = "MIT" }

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
